# physics-thesis

./: .gitignore  README.md  citation.bib  listings-styles.tex  main.tex  preamb.tex
.github/workflows/: main.yml
lst/: algo_short.cpp  compose.yaml  conf_example.json  head_3x3.txt  pt2txt.cpp  short_head_3x3.txt  trig_sim_3x3telescope.cpp
lst/TrigFromBeam/: CMakeLists.txt  TrigFromBeam.cpp  TrigFromBeam.h
pst/: pst.tex
pst/Flux beamer/: demo.tex
src/: abstract.tex  algo.tex  appendix.tex  bib.tex  discon.tex  end.tex  esp.tex  fronte.tex  intro.tex  metris.tex  prefazio.tex  tridas.tex
thesis-pst/: beamercolorthememetropolis.sty  beamerinnerthememetropolis.sty  main.tex  packages.tex  ù
